---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --formatter-enabled=false --linter-enabled=false file.astro
```

## `file.astro`

```astro
---
import { getLocale } from "astro:i18n";
import { Code } from "astro:components";
import "style.css";
import { B, A } from "./util.js";
---
<div></div>
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.astro:2:1 assist/source/organizeImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some imports or exports are not organized.
  
    1 │ ---
  > 2 │ import { getLocale } from "astro:i18n";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  > 3 │ import { Code } from "astro:components";
  > 4 │ import "style.css";
  > 5 │ import { B, A } from "./util.js";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    6 │ ---
    7 │ <div></div>
  
  i Sort these imports.
  
    1 │ ---
  > 2 │ import { getLocale } from "astro:i18n";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  > 3 │ import { Code } from "astro:components";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    4 │ import "style.css";
    5 │ import { B, A } from "./util.js";
  
  i Sort the imported names.
  
    3 │ import { Code } from "astro:components";
    4 │ import "style.css";
  > 5 │ import { B, A } from "./util.js";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    6 │ ---
    7 │ <div></div>
  
  i Safe fix: Organize imports and exports (Biome)
  
    1   │ - import·{·getLocale·}·from·"astro:i18n";
    2   │ - import·{·Code·}·from·"astro:components";
      1 │ + import·{·Code·}·from·"astro:components";
      2 │ + import·{·getLocale·}·from·"astro:i18n";
    3 3 │   import "style.css";
    4   │ - import·{·B,·A·}·from·"./util.js";
      4 │ + import·{·A,·B·}·from·"./util.js";
    5 5 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
